fix overflow of code blocks in blog

--- a/src/homepage/static/styles/blog/[article].css
+++ b/src/homepage/static/styles/blog/[article].css
@@ -10,6 +10,7 @@ h1 {
 
         pre {
             padding: 1em 1em 1em 2em;
+            overflow: scroll;
         }
     }
 
